fix: align title on front page

--- a/app/assets/stylesheets/stories_front_page.css.scss
+++ b/app/assets/stylesheets/stories_front_page.css.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.stories li h2 {
+  padding-left: 15px;
+}
+
 .time-frame {
   font-size: 0.5em;
   font-weight: 100;
